# cosmwasm-floating-point

./: Cargo.toml  README.md
src/: float.rs  main.rs
src/float/: tests.rs
