[package]
name = "cosmwasm_floating_point"
version = "0.1.0"
authors = ["Aidan St. George <aidanstgeorge1@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
forward_ref = "1.0.0"
thiserror = "1.0"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret", package = "secret-cosmwasm-std" }
